--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,70 +1,29 @@
-name: Deploy
+name: deploy
 
 on: push
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  first_job:
+    runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        node: [18, 20]
+    services:
+      redis:
+        image: redis
+        ports:
+          - 6379:6379
 
     steps:
-      - name: Print variable
-        run: echo "${{ secrets.TOKEN_SECRECT }}"
+      - name: Instal redis cli
+        run: apt-get update -y && apt-get install redis-tools -y
 
-      - name: Checkout
-        uses: actions/checkout@v4
+      - name: Test redis
+       run: redis-cli -h localhost -p 6379 ping
+
+      - name: Print variable
+        run: echo "${{ secrets.TOKEN_SECRET }}"
 
       - name: setup
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node }}
-
-      - name: Instalar dependencias
-        run: npm install
-
-      - name: Run test
-        run: npm run test
-      
-      - name: Build page
-        run: npm run build
-  
-      - name: Upload artifact
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.node == 18 }}
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: public/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-
-    permissions:
-      pages: write
-      id-token: write
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment-pages.outputs.page_url }}
-
-    steps:
-      - name: Deploy
-        id: deployment-pages
-        uses: actions/deploy-pages@v4
-
-  notify:
-    runs-on: ubuntu-latest
-    needs: deploy
-    if: always()
-
-    steps:
-      - name: notify to slack
-        uses: 8398a7/action-slack@v3
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK }}
-        with:
-          status: ${{ job.status }}
-          fields: repo,commit,author,job,took
+          node-version: '18'
+    
