--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,24 +6,19 @@ jobs:
   first_job:
     runs-on: ubuntu-latest
 
-    services:
-      redis:
-        image: redis
-        ports:
-          - 6379:6379
-
     steps:
-      - name: Instal redis cli
-        run: sudo apt-get update -y && sudo apt-get install redis-tools -y
-
-      - name: Test redis
-        run: redis-cli -h localhost -p 6379 ping
-
       - name: Print variable
         run: echo "${{ secrets.TOKEN_SECRET }}"
+
+      - name: Checkout
+        uses: actions/checkout@v4
+  
 
       - name: setup
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+
+      - name: Instalar dependencia
+        run: npm install
     
