--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: deploy
 on: push
 
 jobs:
-  first_job:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,4 +24,12 @@ jobs:
 
       - name: run test
         run: npm run test 
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Deploy
+        run: echo "Deploy...."
           
