--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,11 @@ jobs:
       - name: run test
         run: npm run test 
 
+      - name: Build page
+        run: npm run build
+
   deploy:
-    if: ${{ always() }}
+    if: ${{ always() }}  #And failure & success, also always. This 3 aplicattions are esencials for if conditional
     runs-on: ubuntu-latest
     needs: build
 
