--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,19 @@ jobs:
           path: public/
 
   deploy:
-    if: ${{ always() }}  #And failure & success, also always. This 3 aplicattions are esencials for if conditional
     runs-on: ubuntu-latest
     needs: build
 
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Deploy
-        run: echo "Deploy...."
+        id: deployment-pages
+        run: actions/deploy-pages@v4
           
