--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,12 @@ on: push
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        node: [18, 20]
 
     steps:
       - name: Print variable
@@ -17,7 +22,7 @@ jobs:
       - name: setup
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: ${{ matrix.os }}
 
       - name: Instalar dependencias
         run: npm install
