--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       - name: setup
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.os }}
+          node-version: ${{ matrix.node }}
 
       - name: Instalar dependencias
         run: npm install
@@ -57,7 +57,7 @@ jobs:
         uses: actions/deploy-pages@v4
 
   notify:
-    runs-on: ubuntu-lates
+    runs-on: ubuntu-latest
     needs: deploy
     if: always()
 
